--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@google-pay/button-angular": "^3.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "ng": "^0.0.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-scrolltop": "^4.1.2",
     "ngx-toastr": "^14.2.2",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^11.4.7",
+    "sweetalert2": "^11.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
